# Mushroom-Classifier

./: .dockerignore  .envsample  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Fungi_Annotation.ipynb  Image_processing.ipynb  Makefile  PSQL_querys.pgsql  Pipfile  README.md  Untitled.ipynb  YOLO_train_and_inference.ipynb  Yolo5walky.ipynb  auto-commit.bat  challenge_model.ipynb  cloudbuild.yaml  config.py  config.yaml  fungi_2018_visuals.ipynb  get_data.sh  large.ipynb  main.py  model_config.YAML  modelling.ipynb  mush-classifier-main.json  mush-classifier-rando.json  open_images.ipynb  predict.ipynb  pyproject.toml  pyproject2.toml  requirements.txt  terraformenv  test.ipynb  train.ipynb  train.py  wget-prcoess.ipynb
Deploy/: app.py  config.YAML  pyproject.toml  train.py
Deploy/templates/: index.html
FGVC_src/: __init__.py  get_FGVC.py
app/: Dockerfile  Pipfile  app.py  class_dict.pkl  pyproject.toml
app/src/: preprocessing.py
config/: configs.yaml
config/wandb/: defaults.yaml
data/: inat_TPU_df-0828-0728.pkl  inat_TPU_df-0828-0816.pkl  inat_TPU_df-0828-1554.pkl  inat_TPU_df-0828-1620.pkl  inat_TPU_history-0828-1303.pkl  inat_TPU_history-0828-1731.pkl
data/MO/: list403.pkl
deploy/: Pipfile  app.py  cloudbuild.yaml  inat_config.YAML
deploy/model/: fingerprint.pb  keras_metadata.pb
deploy/src/: preprocessing.py  util.py
deploy/templates/: index.html
deployment/: Deployment.ipynb  app.py  config.YAML  form.py  pyproject.toml  train.py
deployment/Deploy Image Classifier With Flask/: app.py
deployment/Deploy Image Classifier With Flask/TPU_test_1/variables/: variables.index
deployment/flask/: generate_html.py  get_images.py  get_prediction.py
deployment/flask/templates/: home.html
deployment/src/: NN.py  config.YAML  datasets.py  functions.py
deployment/templates/: home.html
images/: eda.html
inat_src/: get_inat.py
infrastructure/: main.tf  terraform-account.json  terraform-apply.sh  terraform-destroy.sh  terraform-plan-prod.sh  terraform-plan.sh  variables.tf
infrastructure/.terraform/: terraform.tfstate
infrastructure/vars/: prod.tfvars
logs/: csv_log.csv
models/: NN.py
monitoring/: prefect-deploy.sh
mush_app/: Dockerfile  Pipfile  app.py  pyproject.toml  requirements.txt
mush_app/src/: preprocessing.py
new/FGVC_src/: get_FGVC.py
new/data/: inat_GPU_df.pkl  inat_GPU_history-0828-0710.pkl  inat_TPU_df-0828-1037.pkl  inat_TPU_df-0828-1129.pkl  inat_TPU_df-0828-1239.pkl  inat_TPU_df.pkl  inat_TPU_history-0828-0728.pkl  inat_TPU_history-0828-0816.pkl  inat_TPU_history-0828-1129.pkl  inat_TPU_history-0828-1409.pkl  inat_TPU_history-0828-1554.pkl
new/dataframes/: inat_TPU_df.pkl  test.csv  (+2 more)
notebooks/: 01.EDA.ipynb  01.Fixing_Structure.ipynb  02.EDA-joining_locations.ipynb  02.Joining_Locations.ipynb  03.Metadata_Engineering.ipynb  04.EDA-Visuals.ipynb  05.TFRecords.ipynb  06.Training.ipynb  07.Model-Testing.ipynb  08.MO-EDA.ipynb  09.EXIF-EDA.ipynb  09.MO-EDA2.ipynb  1.Mush_EDA.ipynb  10.MO-Image_Processing.ipynb  11.New-MO-Images.ipynb  12.Confusion-Matrix-EDA.ipynb  Deployment.ipynb  eda.html  fill_taxa.txt  inat_TFrecords.ipynb  prepro.ipynb
old/: README.md
old_functions/: FGVCx_TFRecords.ipynb  datasets.py  functions.py  get_FGVC.py  inat_TFrecords.ipynb  inat_config.YAML  train.py  train2.py
processed_data/: val_BIG.csv  val_annot.csv  val_just_MO_balanced_yolo.csv
scripts/: create_tfrecords.sh  delete_unused_images.py  dotenvs.sh  download_deploy_model.py  get_data.sh  make_tfrecords.py  resave_base_model_weights.py
src/: NN.py  annotation.py  config.YAML  datasets.py  functions.py  get_FGVC.py  get_inat.py
testing/: test.py
tests/: test_deployment_preprocessing.py  test_scripts.py
training/: .dockerignore  .envsample  Dockerfile  Makefile  Pipfile  config.py  find_lr_bounds.py  register_model.py  test.ipynb  test.py  train.ipynb  train.py  train2.ipynb  train2.py  train3.ipynb  train_config.py
(+135 files in other folders)
