[tool.poetry]
name = "Mushroom-Classifier"
version = "0.1.0"
description = "An SMS based mushroom classifier app"
authors = ["Graham Broughton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.0"
pandas = "^2.1.2"
numpy = "^1.26.1"
loguru = "^0.7.2"
tensorflow = "^2.10.0"

[tool.poetry.group.deploy.dependencies]
flask = "^3.0.0"
twilio = "^8.10.0"
pillow = "^10.1.0"
tensorflow = "^2.12.0"

[tool.poetry.group.train.dependencies]
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
prefect = "^2.14.3"
wandb = "^0.15.12"
mlflow = "^2.8.0"
tensorflow = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
