[tool.poetry]
name = "mushroomclassifier"
version = "0.1.0"
description = "EffecientNetv2B0 fine tuned on 80 000 images of ~1400 species"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
tensorflow = "^2.8"
Flask = "^1.1.4"
keras = "^2.9.0"
Pillow = "^9.2.0"
Flask-WTF = ">=0.14.3"
numpy = ">=1.18.5"
scipy = ">=1.2.1"
PyYAML = "^6.0"
uuid = "^1.30"
pandas = "^1.4.4"
Flask-Uploads = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
