[tool.poetry]
name = "mushroomclassifier"
version = "0.1.0"
description = "EffecientNetv2B0 fine tuned on 80 000 images of ~1400 species"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
